magpie 1.6
----------
Code re-org, move common exports to new file hadoop-common-exports.

magpie 1.5
----------
Increase HDFS bandwidthPerSec to 4G, which is ~QDR ipoib speed.

magpie 1.4
----------
Make default HDFS over Lustre replication 3
Document trade offs of replication.
Increase HDFS bandwidthPerSec.
Fix hadoop-hdfs-over-lustre-nodes-decomission-script.sh path bug.
Fix hadoop-create-files-script.sh to work w/ Hadoop 1.0 & 2.0.
Add convenience script hadoop-remove-all-files-script.sh.

magpie 1.3
----------
Remove slurm job name from hdfs over lustre created path. Use path
given directly by user.

magpie 1.2
----------
Move hadoop-gather into generic post run script
hadoop-gather-config-files-and-logs-script.sh.

Fix environment variable export in post scripts

General documentation updates.

magpie 1.1
----------
Add ability to rebalance HDFS data on HDFS over Lustre if user changes
node count.

Added convenience scripts
hadoop-create-files-script.sh,
hadoop-list-files-script.sh,
hadoop-rebalance-hdfs-over-lustre-if-increasing-nodes-script.sh, and
hadoop-hdfs-over-lustre-nodes-decomission-script.sh.

export new environment variable HADOOP_SLAVE_COUNT

Various code cleanup, file organization, and documentation updates

magpie 1.0
----------
Initial release