@@ -51,7 +51,7 @@ Basic Instructions
 1) Download your favorite version of Hadoop off of Apache and install
    it into a location where it's accessible on all cluster nodes.
    Usually this is on a NFS home directory.  Adjust HADOOP_VERSION and
-   HADOOP_BUILD_HOME appropriately for the install.
+   HADOOP_HOME appropriately for the install.
 
 2) Open up sbatch.hadoop and setup Slurm essentials for your job.
    Here are the essentials for the setup:
@@ -81,7 +81,7 @@ Basic Instructions
    HADOOP_VERSION : Make sure your build matches HADOOP_SETUP_TYPE
    (i.e. don't say you want MapReduce 1 and point to Hadoop 2.0 build)
 
-   HADOOP_BUILD_HOME : Where your hadoop code is.  Typically in an NFS mount.
+   HADOOP_HOME : Where your hadoop code is.  Typically in an NFS mount.
 
    HADOOP_LOCAL_DIR : A small place for conf files and log files local
    to each node.  Typically /tmp directory.
