@@ -3,7 +3,7 @@
 # This script removes all your files in HDFS.  It's convenient when
 # doing testing.
 
-FILES=`${HADOOP_BUILD_HOME}/bin/hadoop fs -ls 2> /dev/null | grep -v Found | awk '{print $8}'`
+FILES=`${HADOOP_HOME}/bin/hadoop fs -ls 2> /dev/null | grep -v Found | awk '{print $8}'`
 
 if [ "${HADOOP_SETUP_TYPE}" == "MR1" ]
 then
@@ -16,7 +16,7 @@ fi
 for file in $FILES
 do
     echo "Removing $file"
-    ${HADOOP_BUILD_HOME}/bin/hadoop fs ${rmoption} $file
+    ${HADOOP_HOME}/bin/hadoop fs ${rmoption} $file
 done
 
 exit 0
