@@ -1,6 +1,7 @@
 magpie 1.6
 ----------
 Code re-org, move common exports to new file hadoop-common-exports.
+Rename HADOOP_BUILD_HOME to HADOOP_HOME for legacy purposes.
 
 magpie 1.5
 ----------
